# tronbrowser.dev

./: .env.example  .gitignore  .npmrc  CLAUDE.md  Caddyfile  Dockerfile  README.md  doppler.yaml  eslint.config.js  package.json  pnpm-lock.yaml  railway.json  start.sh  tsconfig.base.json
.github/workflows/: android-engine.yml  ci.yml  extension-scan.yml  linux-phones.yml  mobile.yml  release.yml  submit-packages.yml  test.yml  vu1nz-scan.yml
apps/android-engine/: README.md
apps/android-engine/chromium/: README.md
apps/android-engine/chromium/config/gn-args/: android.gni  common.gni
apps/desktop/: README.md  package.json
apps/desktop/chromium/: README.md
apps/desktop/chromium/config/gn-args/: common.gni  linux.gni  macos.gni  windows.gni
apps/desktop/launcher/: tron-node.mjs  tron-run-hooks.mjs  tron-run.mjs  tron-session  tron-tor-helper  tronbrowser  tronbrowser.cmd
apps/desktop/scripts/: build-release.sh
apps/desktop/src/: binary.ts  chromium-flags.test.ts  chromium-flags.ts  index.ts  launcher.test.ts  launcher.ts  session.test.ts  tor-proxy.test.ts  tor-proxy.ts  tor.test.ts  tor.ts
apps/docs/: README.md  package.json
apps/docs/src/: index.ts
apps/extensions/: README.md  package.json
apps/extensions/public/: extension.html  index.html  install-guide.html  store.css  store.js  submit.html
apps/extensions/registry/: README.md
apps/extensions/src/: index.ts
apps/mobile/: App.tsx  README.md  app.json  index.js  metro.config.js  package.json  tsconfig.json
apps/mobile/src/: index.ts  theme.ts
apps/web/: README.md  package.json
apps/web/public/: 404.html  app.js  browserconfig.xml  dns.html  dns.js  ext-callback.html  index.html  install.sh  llms-full.txt  llms.txt  login.html  login.js  manifest.json  privacy.html  robots.txt  settings-sections.js  settings.html  settings.js  sitemap.xml  skill.md  vault.js
apps/web/src/: index.ts
distribution/: README.md
distribution/appimage/: build.sh  tronbrowser.desktop
distribution/aur/: PKGBUILD
distribution/chocolatey/: tronbrowser.nuspec
distribution/chocolatey/tools/: chocolateyinstall.ps1
distribution/deb-rpm/: build.sh  nfpm.yaml
distribution/flatpak/: dev.tronbrowser.TronBrowser.yml  tron-wrapper
distribution/freebsd/: Makefile  pkg-descr
distribution/gentoo/: tronbrowser-bin-0.1.1.ebuild
distribution/homebrew/: tronbrowser.rb
distribution/nix/: tronbrowser.nix
distribution/scoop/: tronbrowser.json
distribution/snap/: snapcraft.yaml
distribution/ubuntu-touch/: README.md  build.sh  clickable.yaml  manifest.json  tronbrowser-ut  tronbrowser.apparmor  tronbrowser.desktop
distribution/winget/: Profullstack.TronBrowser.installer.yaml
docs/: analyze.md  ci-publishing.md  dns-setup.html  extension-store.md  headless-and-extraction.md  managed-sessions.md  mcp.md  mobile-architecture.md  sdk-and-run.md  snapshots-and-refs.md  tor-onion-mode.md  trace-replay.md  tronbrowser-conversational-ai-prd.md  tronbrowser-m3-browser-agents-prd.md  tronbrowser-prd.md  workflow-nodes.md
docs/adr/: 0001-chromium-fork-base.md
packaging/: build-deb-rpm.sh
scripts/: db-migrate.mjs  publish-extension.sh  set-version.mjs  submit-packages.mjs  sync-shared-settings.mjs
services/api/: Dockerfile  README.md  package.json
services/api/src/: auth.ts  db.ts  dns.ts  email.ts  (+7 more)
services/scheduler/: README.md  package.json
services/sync-server/: README.md  package.json
services/worker/: README.md  package.json
(+82 files in other folders)
